# mcpscrk

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
src/: cli.rs  main.rs
src/crack/: detect.rs  job.rs  mod.rs  rating.rs  runner.rs
src/engine/: block.rs  blueprint.rs  dates.rs  expand.rs  filters.rs  forge.rs  mod.rs  sets.rs
src/server/: mod.rs  routes.rs  state.rs
web/: app.js  index.html  style.css
