[package]
name = "mcpscrk"
version = "0.1.0"
edition = "2021"
description = "Marco Calvo Password Cracker - an OSINT wordlist forge"
authors = ["Marco Calvo"]
license = "MIT"

[[bin]]
name = "mcpscrk"
path = "src/main.rs"

[dependencies]
# Command line: a single flag, the port to serve the workbench on.
clap = { version = "4", features = ["derive"] }

# Web layer: the binary serves both logic and view (axum + tokio).
# `multipart` is needed to receive an uploaded wordlist in the cracking lab.
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

# State, blueprints and the JSON API.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling and structured logging.
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Privilege check at startup (geteuid).
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
